--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1369,7 +1369,7 @@ jobs:
       - name: TensorFlow Hub Tests - TF FE
         run: |
           export PYTHONPATH=${E2E_TESTS_INSTALL_DIR}:$PYTHONPATH
-          python3 -m pytest ${E2E_TESTS_INSTALL_DIR}/test_ovc_mo.py --html=${E2E_TESTS_INSTALL_DIR}/TEST-tf_hub_tf_fe.html --self-contained-html -v --modules=${E2E_TESTS_INSTALL_DIR}/pipelines/production/tf_hub
+          pytest ${E2E_TESTS_INSTALL_DIR}/test_ovc_mo.py --html=${E2E_TESTS_INSTALL_DIR}/TEST-tf_hub_tf_fe.html --self-contained-html -v
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
