--- a/src/plugins/intel_cpu/CMakeLists.txt
+++ b/src/plugins/intel_cpu/CMakeLists.txt
@@ -21,16 +21,20 @@ elseif(OV_COMPILER_IS_CLANG)
     ov_add_compiler_flags(-Wno-delete-non-abstract-non-virtual-dtor)
 endif()
 
+if(CMAKE_COMPILER_IS_GNUCXX)
+    ov_add_compiler_flags(-Wno-sign-compare)
+endif()
+
 if(ARM)
     set(OV_CPU_ARM_TARGET_ARCH_DEFAULT armv7a)
 elseif(AARCH64)
-    if(APPLE)
+    # if(APPLE)
         # Apple M1 / M2 is assumed
         set(OV_CPU_ARM_TARGET_ARCH_DEFAULT arm64-v8.2-a)
         add_definitions(-DOV_CPU_ARM_ENABLE_FP16)
-    else()
-        set(OV_CPU_ARM_TARGET_ARCH_DEFAULT arm64-v8a)
-    endif()
+    # else()
+    #     set(OV_CPU_ARM_TARGET_ARCH_DEFAULT arm64-v8a)
+    # endif()
 endif()
 set(OV_CPU_ARM_TARGET_ARCH ${OV_CPU_ARM_TARGET_ARCH_DEFAULT})
 
