--- a/tests/e2e_oss/requirements.txt
+++ b/tests/e2e_oss/requirements.txt
@@ -23,9 +23,9 @@ tabulate==0.9.0
 pytest>=5.0,<=7.0.1; python_version < '3.10'
 pytest==7.2.0; python_version >= '3.10'
 pytest-cov==2.11.1
-pytest-html==1.19.0
+# pytest-html==1.19.0
 pytest-json-report==1.5.0
-pytest-metadata==1.7.0
+# pytest-metadata==1.7.0
 pytest-xdist==2.1.0
 pytest-timeout==1.3.2
 
