--- a/tests/e2e_oss/requirements.txt
+++ b/tests/e2e_oss/requirements.txt
@@ -8,7 +8,7 @@ py-cpuinfo==7.0.0
 scipy>=1.5.4,<1.12
 opencv-python>=4.5; sys_platform != "darwin"
 opencv-python==4.6.0.66; sys_platform == "darwin"
-test-generator==0.1.1
+# test-generator==0.1.1
 unittest-xml-reporting==3.0.4
 lpips==0.1.3
 
@@ -32,7 +32,7 @@ pytest-timeout==1.3.2
 # for common utils, e2e_oss
 pyyaml==6.0
 jsonschema==4.17.0
-filelock==3.9.0
+# filelock==3.9.0
 omegaconf>=2.1,<2.4
 pycocotools>=2.0.6
 
