Cover install_build_dependencies.sh script by labeler

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -48,6 +48,7 @@
 - 'scripts/**/*'
 - '.gitmodules'
 - '**/setup.py'
+- '**/*dependencies*.sh'
 - any: ['thirdparty/**/*',
         '!thirdparty/**/CMakeLists.txt']
 
