--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1008,10 +1008,15 @@ jobs:
 
       - name: Python ONNX operators tests
         run: |
-          # Skip test_onnx/test_zoo_models and test_onnx/test_backend due to long execution time - ONNX Model Zoo tests are run separately
+          # Skip test_onnx/test_zoo_models due to long execution time - ONNX Model Zoo tests are run separately
           python3 -m pytest -sv ${OPENVINO_REPO}/src/frontends/onnx/tests -k 'not cuda' \
             --junitxml=${INSTALL_TEST_DIR}/TEST-onnx_frontend.xml \
             --ignore=${OPENVINO_REPO}/src/frontends/onnx/tests/test_python/test_zoo_models.py
+
+      - name: nGraph Tests
+        run: |
+          python3 -m pytest -v ${OPENVINO_REPO}/src/bindings/python/tests_compatibility/test_ngraph -k 'not _cuda' \
+            --junitxml=${INSTALL_TEST_DIR}/TEST-ngraph.xml
 
       - name: MO Python API Tests
         run: |
