always run new step

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1014,6 +1014,7 @@ jobs:
             --ignore=${OPENVINO_REPO}/src/frontends/onnx/tests/test_python/test_zoo_models.py
 
       - name: nGraph Tests
+        if: ${{ always() }}
         run: |
           python3 -m pytest -v ${OPENVINO_REPO}/src/bindings/python/tests_compatibility/test_ngraph -k 'not _cuda' \
             --junitxml=${INSTALL_TEST_DIR}/TEST-ngraph.xml
