--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -1,14 +1,14 @@
 name: macOS (macOS 12, Python 3.11)
 on:
   workflow_dispatch:
-  pull_request:
-    paths-ignore:
-      - '**/docs/**'
-      - 'docs/**'
-      - '**/**.md'
-      - '**.md'
-      - '**/layer_tests_summary/**'
-      - '**/conformance/**'
+#  pull_request:
+#    paths-ignore:
+#      - '**/docs/**'
+#      - 'docs/**'
+#      - '**/**.md'
+#      - '**.md'
+#      - '**/layer_tests_summary/**'
+#      - '**/conformance/**'
   push:
     paths-ignore:
       - '**/docs/**'
@@ -641,7 +641,6 @@ jobs:
             --ignore=${{ env.OPENVINO_REPO }}/src/frontends/onnx/tests/test_python/test_zoo_models.py
 
       - name: nGraph Tests
-        if: ${{ always() }}
         run: |
           python3 -m pytest -v ${{ env.OPENVINO_REPO }}/src/bindings/python/tests_compatibility/test_ngraph -k 'not _cuda' \
             --junitxml=${{ env.INSTALL_TEST_DIR }}/TEST-ngraph.xml
