--- a/.ci/azure/linux_ngraph_onnx.yml
+++ b/.ci/azure/linux_ngraph_onnx.yml
@@ -102,11 +102,6 @@ jobs:
       sudo sh get-docker.sh
     displayName: 'Install dependencies'
 
-  - script: |
-      mkdir -p $HOME/intel/
-      echo 0 > $HOME/intel/openvino_telemetry
-    displayName: 'Disable Telemetry'
-
   - script:
       src/frontends/onnx/tests/tests_python/model_zoo_preprocess.sh -d $(MODELS_DIR)/models_data -o -s "$(ONNX_MODEL_ZOO_SHA)"
     displayName: 'Update models'
@@ -127,6 +122,6 @@ jobs:
         --name openvino-onnx-ci-container \
         --volume $(MODELS_DIR)/models_data/model_zoo/onnx_model_zoo_$(ONNX_MODEL_ZOO_SHA):/root/.onnx/model_zoo/onnx_model_zoo \
         --volume $(MODELS_DIR)/msft:/root/.onnx/model_zoo/MSFT \
-        --volume $HOME/intel:/root/intel openvino-onnx-ci-image \
+        --env CI=True openvino-onnx-ci-image \
         /bin/bash -c "$(TOX_COMMAND)"
     displayName: 'Docker run $(BUILD_TYPE)'
