Move to hub tests

--- a/tests/model_hub_tests/torch_tests/requirements.txt
+++ b/tests/model_hub_tests/torch_tests/requirements.txt
@@ -1,4 +1,6 @@
 -c ../../constraints.txt
+# to install cpu torch version
+--extra-index-url https://download.pytorch.org/whl/cpu
 numpy
 pytest
 pytest-html
